eeepc-acpi-scripts (1.1.7) UNRELEASED; urgency=low

  [ Damyan Ivanov ]
  * add a hook in /etc/pm/sleep.d that switches off wlan on suspend on models
    using RT2860
  * wireless.sh: deconfigure wlan0 and remove the rt2860sta module before
    switching off the hardware

  [ Darren Salt ]
  * rfkill-input isn't present in kernel ≥ 2.6.31, so don't try loading it.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Fri, 01 Jan 2010 21:16:09 +0000

eeepc-acpi-scripts (1.1.6) unstable; urgency=low

  * Add support for ACPI button/* and video/* events. (Closes: #562166)
    - It is possible that only these will be reported, but it is also
      possible that both these and hotkey events will be reported; and there
      are keys for which only hotkey events are reported (it is expected
      that this will change).
    - This is incomplete: no known button or video events for Fn-F3 & Fn-F7.
    - There is one button/* event which is reported for two different keys,
      fortunately on different models. Disambiguation is done via the
      product name (requires DMI support, which is normally enabled).
  * Add support for the S.H.E. button on some models, e.g. 1002HA.
    - This is incomplete: no known button event.
  * Have the audio keys affect the 'Master' mixer control by default. This
    has a side effect: the 'Beep' control is effectively muted when 'Master'
    is muted.
  * Fix bugs which prevent touchpad toggling from working (synclient has
    lost -s at some point), and don't report anything if toggling failed.

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Fri, 01 Jan 2010 20:05:10 +0000

eeepc-acpi-scripts (1.1.5) unstable; urgency=high

  [ Darren Salt ]
  * Fix Super Hybrid Engine support breakage in 1.1.4.
    A missing "[" caused the AC-adaptor-unplugged code to fail; consequently,
    the preferred running-on-battery mode (the default being underclocked)
    would not be selected.