@@ -5,11 +5,6 @@
 . /usr/share/acpi-support/policy-funcs
 
 
-# If powersaved is running, let it process the acpi event
-if pidof powersaved; then
-	exit 0
-fi
-
 if [ `CheckPolicy` = 0 ] ; then
 	exit 0
 fi
